# mimi

./: .gitignore  README.md  app.py  hosts.py  index.html  main.py  pyproject.toml  requirements.txt  utils.py  yabe.py
static/: index.js
templates/: asmrone.html  index.html  process_form.html
