[project]
name = "mimi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "faster-whisper>=1.0.3",
    "requests>=2.32.3",
    "stable-ts[hf]",
    "yt-dlp>=2024.8.6",
]

[tool.uv.sources]
stable-ts = { git = "https://github.com/jianfch/stable-ts.git" }
